--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,3 +14,5 @@ gitlab_runner_executor: 'shell'
 gitlab_runner_docker_image: ''
 # Runner tags
 gitlab_runner_tags: []
+# Set 'true' for docker-in-docker executor
+gitlab_docker_privileged: false
