--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,8 +11,6 @@ gitlab_runner_description: '{{ ansible_hostname }}'
 # Runner executor
 gitlab_runner_executor: 'shell'
 # Default Docker image
-gitlab_runner_docker_image: ''
+gitlab_runner_docker_image: 'docker:stable'
 # Runner tags
 gitlab_runner_tags: []
-# Set 'true' for docker-in-docker executor
-gitlab_docker_privileged: false
