--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,3 +14,5 @@ gitlab_runner_executor: 'shell'
 gitlab_runner_docker_image: 'docker:stable'
 # Runner tags
 gitlab_runner_tags: []
+# Docker cache folder
+gitlab_runner_docker_cache: 'cache'
